--- a/src/sass/_product-item.scss
+++ b/src/sass/_product-item.scss
@@ -14,7 +14,6 @@
 }
 
 .products-list__item {
-  min-width: 280px;
   width: calc(100% - 200px);
   border-radius: 24px;
   margin-top: 148px;
@@ -22,6 +21,9 @@
   margin-right: auto;
   padding-bottom: 40px;
 
+  @media screen and (max-width: 767px) {
+    min-width: 280px;
+  }
   @media screen and (min-width: 768px) {
     width: calc((100% - 3 * 16px) / 3);
     margin: 128px 8px 8px 8px;
