--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -595,13 +595,18 @@ ul {
 }
 
 .products-list__item {
-  min-width: 280px;
   width: calc(100% - 200px);
   border-radius: 24px;
   margin-top: 148px;
   margin-left: auto;
   margin-right: auto;
   padding-bottom: 40px;
+}
+
+@media screen and (max-width: 767px) {
+  .products-list__item {
+    min-width: 280px;
+  }
 }
 
 @media screen and (min-width: 768px) {
