--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -455,7 +455,7 @@ ul {
   }
 }
 
-.btn {
+.btn--arrow {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -475,29 +475,29 @@ ul {
   transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 }
 
-.btn:hover, .btn:focus {
+.btn--arrow:hover, .btn--arrow:focus {
   background-color: #c7133e;
 }
 
 @media screen and (min-width: 1280px) {
-  .btn {
+  .btn--arrow {
     width: 26px;
     height: 26px;
   }
 }
 
-.btn__icon {
+.btn--arrow__icon {
   -webkit-transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
   transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
   fill: #c7133e;
 }
 
-.btn__icon:hover, .btn__icon:focus {
+.btn--arrow__icon:hover, .btn--arrow__icon:focus {
   fill: #ffffff;
 }
 
 @media screen and (min-width: 1280px) {
-  .btn__icon {
+  .btn--arrow__icon {
     width: 25px;
     height: 25px;
   }
