--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,4 +1,5 @@
 <section class="galerry">
+  <h2 class="hidden">Gallery</h2>
   <div class="container container--gallery">
     <div class="gallery__box gallery__one">
       <div class="gallery__img-box one">
