--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -43,8 +43,8 @@
         </p>
       </li>
       <li class="hero__about--item">
-        <a class="btn--arrow">
-          <svg class="btn__icon" width="15" height="15">
+        <a class="btn-arrow">
+          <svg class="btn-arrow--icon" width="15" height="15">
             <use href="./images/symbol-defs.svg#icon-arrow-only-arrow"></use>
           </svg>
         </a>
