--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -455,7 +455,7 @@ ul {
   }
 }
 
-.btn--arrow {
+.btn-arrow {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -475,29 +475,29 @@ ul {
   transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 }
 
-.btn--arrow:hover, .btn--arrow:focus {
+.btn-arrow:hover, .btn-arrow:focus {
   background-color: #c7133e;
 }
 
 @media screen and (min-width: 1280px) {
-  .btn--arrow {
+  .btn-arrow {
     width: 26px;
     height: 26px;
   }
 }
 
-.btn--arrow__icon {
+.btn-arrow--icon {
   -webkit-transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
   transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
   fill: #c7133e;
 }
 
-.btn--arrow__icon:hover, .btn--arrow__icon:focus {
+.btn-arrow--icon:hover, .btn-arrow--icon:focus {
   fill: #ffffff;
 }
 
 @media screen and (min-width: 1280px) {
-  .btn--arrow__icon {
+  .btn-arrow--icon {
     width: 25px;
     height: 25px;
   }
