fix unvaild html

--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -1,5 +1,6 @@
 <section class="contact .container" id="contact">
   <div class="contact-div">
+    <h1 class="hidden" >Contact</h1>
     <article class="contact-card contact-card__anim1">
       <h2 class="contact-title">cafe</h2>
       <ul class="contact-list">
@@ -91,9 +92,9 @@
               <div class="contact-map">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11879.668874027699!2d-87.62174871324999!3d41.89463736753213!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880e2caabfd640d1%3A0x86af0f869dc4b0af!2zU3RyZWV0ZXJ2aWxsZSwg0KfQuNC60LDSkdC-LCDQhtC70LvRltC90L7QudGBIDYwNjExLCDQodC_0L7Qu9GD0YfQtdC90ZYg0KjRgtCw0YLQuCDQkNC80LXRgNC40LrQuA!5e0!3m2!1suk!2sua!4v1655023395894!5m2!1suk!2sua" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
-              <a href="https://chrome.google.com/webstore/detail/chroma/pkgejkfioihnchalojepdkefnpejomgn?utm_campaign=chromapromo&utm_source=codepen.io" target="_blank">
+              <a href="https://chrome.google.com/webstore/detail/chroma/pkgejkfioihnchalojepdkefnpejomgn?utm_campaign=chromapromo&utm_source=codepen.io" target="_blank"></a>
             </div>
           </div>
         </div>
-  </div>
+     </div>
 </section>
