--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -8,7 +8,7 @@
     <nav>
       <ul class="header-nav__list list">
         <li class="header-nav__item">
-          <a class="header-nav__link link" href="#Home">Home</a>
+          <a class="header-nav__link link" href="#hero">Home</a>
         </li>
         <li class="header-nav__item">
           <a class="header-nav__link link" href="#About_us">About us</a>
