--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -91,7 +91,7 @@
 
 /* Tell menu */
 
-.tel-menu.is-hidden {
+.tel-menu.is-hidden-menu {
   pointer-events: painted;
   visibility: visible;
   transform: translate(0px, 0px);
@@ -100,6 +100,7 @@
 
 .tel-menu {
   position: fixed;
+  z-index: 999;
   top: 0;
   right: 0;
   width: 100%;
