--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -42,6 +42,7 @@ ul {
   margin-right: auto;
   padding-right: 20px;
   padding-left: 20px;
+  max-width: 1280px;
 }
 
 @media screen and (min-width: 768px) {
