--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -31,7 +31,7 @@
         <use href="./images/symbol-defs.svg#icon-burger"></use>
       </svg>
     </button>
-    <button class="header__tablet-button" type="button">
+    <button data-modal-open class="header__tablet-button" type="button">
       Buy now
       <svg class="tablet-buttot-svg" width="8" height="11">
         <use href="./images/symbol-defs.svg#icon-button-arrow"></use>
